istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication

metadata:
  name: default

spec:
  mtls:
    mode: PERMISSIVE
