istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule

metadata:
  name: frontend-destinationrule

spec:
  host: frontend-service

  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
