istio/fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: order-fault-injection

spec:
  hosts:
  - order-service

  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 3s

    route:
    - destination:
        host: order-service
        port:
          number: 5001
